# path_smoothing

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  Ipopt_smooth.cpp  data.csv  data_sin-1.csv  data_sin.csv  data_sin_1.csv  osqp_smooth.cpp  smooth_without_obstacle_demo.cpp  smooth_without_obstacle_result_1.csv
include/path_smoothing/: Ipopt_smooth.hpp  path_smoothing.hpp
src/path_smoothing/: cg_smoothing_function.cpp  path_smoothing.cpp
